# idionautic-demo

./: .gitignore  Cargo.toml  README.md
frontend/: .gitignore  package-lock.json  package.json  webpack.config.js
frontend/src/: app.js
src/: main.rs
src/static/: app.js
templates/: index.html
